--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
-backend/node_modules
-client/docker/mysql
-client/src/node_modules
+/backend/node_modules
+/client/docker/mysql
+/client/.phpunit.cache
+/client/node_modules
+/client/public/build
+/client/public/hot
+/client/public/storage
+/client/storage/*.key
+/client/vendor
+/client/.env
+/client/.env.backup
+/client/.env.production
+/client/.phpunit.result.cache
+/client/Homestead.json
+/client/Homestead.yaml
+/client/auth.json
+/client/npm-debug.log
+/client/yarn-error.log
+/client/.fleet
+/client/.idea
+/client/.vscode
