--- a/client/docker-compose.yaml
+++ b/client/docker-compose.yaml
@@ -1,9 +1,15 @@
 version: "3"
+
+networks:
+  client:
+
 services:
   client-nginx:
     container_name: "client-nginx"
     build:
       context: ./docker/nginx
+    networks:
+      - client
     depends_on:
       - client-app
     ports:
@@ -19,6 +25,8 @@ services:
       - client-mysql
     ports:
       - 5173:5173
+    networks:
+      - client
     volumes:
       - ./src:/usr/app
       - /usr/app/node_modules
@@ -26,13 +34,30 @@ services:
       - ./docker/php/php.ini:/usr/local/etc/php/php.ini
 
   client-mysql:
-    image: mysql:8.0.28
-    command: --max_allowed_packet=32505856
-    container_name: "client-mysql"
-    volumes:
-      - ./docker/mysql:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=client
+    image: mysql:latest
+    command: --default-authentication-plugin=mysql_native_password
+    container_name: client_mysql
+    restart: always
     ports:
-      - 3306:3306
+      - "3306:3306"
+    environment:
+      MYSQL_USER: user
+      MYSQL_ROOT_PASSWORD: root123
+      MYSQL_PASSWORD: root123
+      MYSQL_DATABASE: clientdb
+    networks:
+      - client
+  phpmyadmin:
+    image: phpmyadmin
+    restart: always
+    ports:
+      - "8001:80"
+    environment:
+      MYSQL_ROOT_PASSWORD: root123
+      PMA_HOST: mysql
+      PMA_USER: root
+      PMA_PASSWORD: root123
+    environment:
+      - PMA_ARBITRARY=1
+    networks:
+      - client
