--- a/client/src/package.json
+++ b/client/src/package.json
@@ -5,8 +5,10 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^4.0.0",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "sass": "^1.58.3",
         "vite": "^4.0.0"
     }
 }
