--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,16 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "PingDateTime RESTful API",
+  "description": "PingDateTime API",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "watch": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tristan Viel Antazo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.21"
   }
 }
