--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Tristan Viel Antazo",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "express": "^4.18.2",
     "nodemon": "^2.0.21"
   }
